--- a/frontend/.travis.yml
+++ b/frontend/.travis.yml
@@ -5,6 +5,7 @@ sudo: required
 services:
   - docker
 before_install:
+  - gem install bundler
   - docker build -t rafikdock/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true rafikdock/docker-react npm run test -- --coverage
