--- a/frontend/.travis.yml
+++ b/frontend/.travis.yml
@@ -8,3 +8,16 @@ before_install:
   - docker build -t rafikdock/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true rafikdock/docker-react npm run test -- --coverage
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: elasticbeanstalk-us-east-1-577215614666
+  bucket_path: "docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY # this is coming from travis CI environment
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
